--- a/app/css/style.css
+++ b/app/css/style.css
@@ -374,19 +374,41 @@ body {
   color: #ffcdd2;
 }
 .container .box-empty {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 400px;
+  width: 40%;
+  margin: 0 30%;
+  height: 100%;
+  text-align: left;
+}
+.container .box-empty h1 {
+  font-size: 1.8em;
+  color: #263238;
+  margin-bottom: 5px;
+}
+.container .box-empty p {
+  font-size: 1.4em;
+  margin-bottom: 30px;
+  color: #37474f;
 }
 .container .box-empty a {
-  background: #2962ff;
-  color: #FFFFFF;
+  width: 100%;
   font-size: 1.4em;
-  text-decoration: none;
+  border: 0px;
+  padding: 16px 0;
+  margin: 0%;
+  margin-top: 15px;
   border-radius: 5px;
-  padding: 16px;
+  background: #00b900;
+  color: #ffffff;
+  font-size: 1.2em;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
 }
 .form {
   width: 40%;
@@ -926,39 +948,25 @@ body {
   .header {
     width: 100%;
     padding: 0;
-    height: 80px;
-    background: #AADDDA;
+    height: 60px;
   }
   .header a.logo-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: auto;
+    margin-left: 5%;
   }
   .header a.logo-icon img {
-    padding: 20px;
-    height: 40px;
+    padding: 15px 0;
+    height: 30px;
   }
   .header .title {
-    color: #b0bec5;
     font-size: 1.8em;
-    margin-left: auto;
-    margin-right: auto;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    flex: 1;
   }
-  .header .title:hover {
-    cursor: default;
-  }
-  .header .title strong {
-    color: #37474f;
+  .header .title:first-child {
+    padding-left: 5%;
   }
   .header .btn-icon {
-    font-size: 1.6em;
-    width: 80px;
-    height: 80px;
+    font-size: 1.2em;
+    width: 60px;
+    height: 60px;
     color: #b0bec5;
     display: flex;
     justify-content: center;
@@ -970,335 +978,141 @@ body {
   }
   .header .btn-text {
     font-size: 1em;
-    text-decoration: none;
-    padding: 8px 20px;
-    background: #eceff1;
-    color: #b0bec5;
+    padding: 6px 15px;
     border-radius: 5px;
-  }
-  .header .btn-text.create {
-    background: #00b900;
-    color: #FFFFFF;
+    margin-right: 5%;
   }
   .container {
-    width: 60%;
-    margin: 0 20%;
-  }
-  .container .box {
-    display: flex;
-    flex-direction: column;
-  }
-  .container .box:last-child .device-list {
-    border-bottom: 0;
+    width: 100%;
+    margin: 0;
   }
   .container .box .head {
-    display: flex;
-    height: 80px;
-    border-bottom: 2px solid #eceff1;
-    margin-bottom: 26.666666666666668px;
-    align-items: center;
+    padding: 0 5%;
+    height: 60px;
+    margin-bottom: 20px;
   }
   .container .box .head .title {
     font-size: 1.8em;
-    color: #37474f;
-    margin-right: auto;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .container .box .head .title:hover {
-    cursor: default;
   }
   .container .box .head a {
     font-size: 1em;
-    text-decoration: none;
-    padding: 8px 20px;
-    background: #eceff1;
-    color: #b0bec5;
+    padding: 6px 15px;
     border-radius: 5px;
   }
   .container .box .device-list {
-    display: flex;
-    flex-flow: row wrap;
-    margin-bottom: 40px;
+    padding: 0 5%;
+    margin-bottom: 30px;
   }
   .container .box .device-list a.device-card {
-    width: 23%;
-    padding: 3%;
-    margin-right: 2.66%;
-    margin-bottom: 2.66%;
-    height: 170px;
-    text-decoration: none;
+    width: 47.5%;
+    padding: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    height: 150px;
     border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: #eceff1;
-    color: #b0bec5;
-    box-sizing: border-box;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-  }
-  .container .box .device-list a.device-card:hover {
-    transform: translateY(-5px);
   }
   .container .box .device-list a.device-card.create-button {
-    background: #FFFFFF;
-    border: 2px dashed #b0bec5;
-    color: #b0bec5;
     font-size: 1.4em;
-    align-items: center;
-    box-shadow: none;
   }
-  .container .box .device-list a.device-card.create-button:hover {
-    transform: initial;
+  .container .box .device-list a.device-card:nth-child(2n+0) {
+    margin-right: 0%;
   }
   .container .box .device-list a.device-card:nth-child(4n+0) {
     margin-right: 0%;
   }
   .container .box .device-list a.device-card .name {
     font-size: 1.4em;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
   }
   .container .box .device-list a.device-card .temp {
     font-size: 2.16em;
-    font-weight: bold;
   }
   .container .box .device-list a.device-card .info {
     font-size: 1em;
-    display: flex;
   }
   .container .box .device-list a.device-card .info .updated {
     font-size: 1em;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    margin-right: auto;
   }
   .container .box .device-list a.device-card .info .icon {
     margin-left: 10px;
   }
-  .container .box .device-list a.device-card.active {
-    background: #2962ff;
-    color: #e3f2fd;
-  }
-  .container .box .device-list a.device-card.active .temp {
-    color: #FFFFFF;
-  }
-  .container .box .device-list a.device-card.alret {
-    background: #ff1744;
-    color: #FFFFFF;
-    -webkit-animation-name: bounce;
-    animation-name: bounce;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-delay: 1s;
-    animation-delay: 1s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-  }
-  .container .box .device-list a.device-card.alret .desc,
-  .container .box .device-list a.device-card.alret .status-icon {
-    color: #ffcdd2;
-  }
   .container .box-empty {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
+    width: 90%;
+    margin: 0 5%;
+  }
+  .container .box-empty h1 {
+    font-size: 1.8em;
+    margin-bottom: 5px;
+  }
+  .container .box-empty p {
+    font-size: 1.4em;
+    margin-bottom: 30px;
   }
   .container .box-empty a {
-    background: #2962ff;
-    color: #FFFFFF;
     font-size: 1.4em;
-    text-decoration: none;
+    padding: 16px 0;
+    margin-top: 15px;
     border-radius: 5px;
-    padding: 16px;
+    font-size: 1.2em;
   }
   .form {
-    width: 40%;
-    margin: 80px 30%;
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
+    width: 90%;
+    margin: 30px 5%;
+    margin-top: 60px;
   }
   .form.vertical-center {
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    margin: 0 30%;
+    position: initial;
+    margin: 30px 5%;
   }
   .form.login {
-    justify-content: center;
     position: fixed;
-    top: 0;
-    left: 0;
     height: 100%;
-    width: 30%;
-    margin: 0 35%;
-    text-align: center;
+    width: 90%;
+    margin: 0 5%;
   }
   .form.login.logout {
-    font-size: 1.6em;
-    color: #2962ff;
+    font-size: 1.2em;
   }
   .form.login p {
     font-size: 1.4em;
-    text-align: center;
-  }
-  .form.login p a {
-    color: #2962ff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .form.login p a:hover {
-    text-decoration: underline;
   }
   .form.login .logo {
     width: 30%;
     margin: 0 35%;
     margin-bottom: 15px;
-    float: left;
-    display: block;
-  }
-  .form.login .logo img {
-    width: 100%;
-    float: left;
-    display: block;
   }
   .form .form-items {
-    display: flex;
-    flex-direction: column;
     margin-bottom: 30px;
-  }
-  .form .form-items.hidden {
-    display: none;
-  }
-  .form .form-items:last-child {
-    margin-bottom: 0;
   }
   .form .form-items label {
     font-size: 1em;
-    color: #37474f;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     margin-bottom: 10px;
-    font-weight: bold;
   }
   .form .form-items label i {
     margin-left: 5px;
   }
-  .form .form-items label .label-button {
-    color: #2962ff;
-    text-decoration: none;
-  }
-  .form .form-items label .label-button:hover {
-    cursor: pointer;
-    text-decoration: underline;
-  }
-  .form .form-items label:hover {
-    cursor: pointer;
-  }
   .form .form-items .input-text,
   .form .form-items .input-textarea {
-    width: 100%;
-    float: left;
-    display: block;
     font-size: 1.2em;
     padding: 16px 16px;
-    background: #eceff1;
-    color: #2962ff;
-    margin: 0%;
     border-radius: 5px;
-    box-sizing: border-box;
-    border: 2px solid #eceff1;
-    resize: none;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-  }
-  .form .form-items .input-text.loading,
-  .form .form-items .input-textarea.loading {
-    background: transparent;
-    color: #2962ff;
-  }
-  .form .form-items .input-text:hover,
-  .form .form-items .input-textarea:hover {
-    cursor: pointer;
-  }
-  .form .form-items .input-text:focus,
-  .form .form-items .input-textarea:focus {
-    border: 2px solid #2962ff;
-  }
-  .form .form-items .input-text:disabled,
-  .form .form-items .input-textarea:disabled {
-    background: #eceff1;
-    color: #2962ff;
-  }
-  .form .form-items .input-textarea {
-    height: 100px;
   }
   .form .form-items .btn-submit {
-    width: 100%;
     font-size: 1.4em;
-    border: 0px;
     padding: 16px 0;
-    margin: 0%;
     margin-top: 15px;
     border-radius: 5px;
-    background: #2962ff;
-    color: #ffffff;
     font-size: 1.2em;
-    font-weight: bold;
   }
   .form .form-items .btn-submit i {
     margin-left: 10px;
     font-size: 0.9em;
   }
-  .form .form-items .btn-submit:hover {
-    cursor: pointer;
-    background: #3581c2;
-  }
-  .form .form-items .btn-submit.loading {
-    background: #eceff1;
-    color: #b0bec5;
-    box-shadow: none;
-  }
-  .form .form-items .btn-submit.completed {
-    background: #00b900;
-    box-shadow: none;
-  }
   .form .form-items .note {
-    color: #37474f;
     font-size: 1em;
     margin-top: 10px;
   }
-  .form .form-items .note a {
-    color: #2962ff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .form .form-items .note a:hover {
-    text-decoration: underline;
-  }
-  .form .form-items .inputs {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
   .form .form-items .inputs .input-text {
     width: 49%;
-    text-align: center;
-    flex-grow: unset;
   }
   .form .form-items .lists {
     display: flex;
@@ -1357,88 +1171,49 @@ body {
     cursor: pointer;
   }
   .device-info {
-    width: 40%;
-    margin: 80px 30%;
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
+    width: 90%;
+    margin: 60px 5%;
+    margin-top: 30px;
   }
   .device-info .info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-bottom: 40px;
   }
   .device-info .info .temperature-current {
     font-size: 5.4em;
     line-height: 1.2em;
-    font-weight: bold;
-    color: #2962ff;
-  }
-  .device-info .info .temperature-current.over {
-    color: #ff1744;
   }
   .device-info .info p {
     font-size: 1em;
-    color: #b0bec5;
-  }
-  .device-info .info:hover {
-    cursor: default;
   }
   .device-info .temperature-stat {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     margin-bottom: 40px;
   }
   .device-info .temperature-stat .box {
     width: 31.33%;
-    background: #eceff1;
     margin-right: 3%;
     padding: 0 5%;
     height: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     border-radius: 5px;
-    box-sizing: border-box;
   }
   .device-info .temperature-stat .box:nth-child(3n+0) {
     margin-right: 0%;
   }
   .device-info .temperature-stat .box h3 {
     font-size: 2.16em;
-    line-height: 1.2em;
-    color: #37474f;
   }
   .device-info .temperature-stat .box p {
     font-size: 1em;
-    color: #b0bec5;
-  }
-  .device-info .temperature-stat .box.highest .over {
-    color: #ff1744;
-  }
-  .device-info .temperature-stat .box.lowest .over {
-    color: #ff1744;
-  }
-  .device-info .temperature-stat .box:hover {
-    cursor: default;
   }
   .device-info .graph {
-    width: 100%;
-    display: flex;
     height: 150px;
     margin-bottom: 40px;
   }
   .device-info .graph canvas {
-    width: 100%;
     height: 150px;
   }
   .device-info h2 {
     font-size: 1.4em;
     margin-bottom: 15px;
-    color: #b0bec5;
-    font-weight: normal;
   }
   .device-info .history {
     width: 100%;
@@ -1449,127 +1224,48 @@ body {
     background: #eceff1;
   }
   .device-info .history .logitems {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 15px 25px;
+    padding: 15px 5%;
     font-size: 1.4em;
-    color: #37474f;
-    border-bottom: 1px dotted #b0bec5;
-  }
-  .device-info .history .logitems:last-child {
-    border-bottom: 0;
-  }
-  .device-info .history .logitems:hover {
-    cursor: default;
-  }
-  .device-info .history .logitems.alert .status {
-    color: #ff1744;
   }
   .device-info .history .logitems .status {
-    width: 5%;
-    color: #2962ff;
+    width: 10%;
     font-size: 0.7em;
   }
   .device-info .history .logitems .time {
-    width: 70%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    width: 55%;
   }
   .device-info .history .logitems .icon {
     width: 5%;
-    text-align: right;
     font-size: 0.7em;
-    color: #b0bec5;
   }
   .device-info .history .logitems .temp {
-    width: 20%;
-    text-align: right;
-    font-weight: bold;
+    width: 30%;
   }
   .device-info .history .loading {
-    width: 100%;
     padding: 15% 0;
-    display: flex;
-    justify-content: center;
     font-size: 1.4em;
-    font-style: italic;
-    color: #b0bec5;
   }
   .device-info .history .empty {
-    width: 100%;
     padding: 15% 0;
-    display: flex;
-    justify-content: center;
-    color: #b0bec5;
     font-size: 1.4em;
-    font-style: italic;
   }
   .footer {
-    width: 60%;
-    margin: 0 20%;
-    margin-bottom: 2%;
-    color: #b0bec5;
-    display: flex;
+    width: 90%;
+    margin: 5%;
     font-size: 1em;
-    flex-direction: row;
-    justify-content: space-between;
   }
   .footer i {
     margin-right: 5px;
   }
   .footer a {
-    padding: 3px 10px;
-    text-decoration: none;
-    background: #eceff1;
-    color: #b0bec5;
+    padding: 3px 6px;
     border-radius: 5px;
   }
   #progress-bar {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 5%;
-    height: 3px;
-    background: #2962ff;
-    float: left;
-    display: block;
-    z-index: 100;
-    display: none;
+    height: 5px;
   }
   #loading-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 5%;
-    height: 3px;
-    border-radius: 20%;
-    background: #2962ff;
-    float: left;
-    display: block;
-    z-index: 100;
-    transition: all 10s ease-in-out;
-    -moz-transition: all 10s ease-in-out;
-    -webkit-transition: all 10s ease-in-out;
-    -o-transition: all 10s ease-in-out;
-  }
-  #loading-bar.action {
-    transform: translateX(1900%);
-  }
-  #filter {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    float: left;
-    display: block;
-    z-index: 999;
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-    background: rgba(0, 0, 0, 0.65);
-    display: none;
+    height: 5px;
   }
   .message-box {
     position: fixed;
@@ -1630,25 +1326,10 @@ body {
     color: #b0bec5;
   }
   #disconnect-bar {
-    position: fixed;
     bottom: -60px;
-    left: 0px;
     width: 100%;
     height: 60px;
-    display: flex;
-    background: #eceff1;
-    color: #b0bec5;
     font-size: 1.4em;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-  }
-  #disconnect-bar.active {
-    transform: translateY(-100%);
   }
   #disconnect-bar i {
     margin-right: 15px;
