Fix touch-action css

--- a/app/less/config.less
+++ b/app/less/config.less
@@ -31,10 +31,10 @@ html {
     touch-action: manipulation;
 }
 
-a[href], button {
-    -ms-touch-action: none; /* IE10 */
-    touch-action: none;     /* IE11 */
-}
+// a[href], button {
+//     -ms-touch-action: none; /* IE10 */
+//     touch-action: none;     /* IE11 */
+// }
 
 body {
     background: @bg_color;
