--- a/app/less/config.less
+++ b/app/less/config.less
@@ -13,7 +13,7 @@
 @font_family_topic: 'maledpan';
 
 // http://www.color-hex.com/color/21ce99
-@primary_color: #2962FF; // Active Color
+@primary_color: #236CBA; // Active Color
 @primary_color_dark: #3581C2;
 @primary_color_light: #E3F2FD;
 @bg_color: #FFFFFF;
@@ -37,7 +37,7 @@ html {
 // }
 
 body {
-    background: @bg_color;
+    background: @primary_color;
     font-family: @font_family_topic;
     overflow-x: hidden;
 }
