--- a/app/less/style.less
+++ b/app/less/style.less
@@ -19,6 +19,7 @@
 	background: @bg_color;
 	align-items: center;
 	justify-content: center;
+	background: @primary_color;
 
 	a.logo-icon {
 		display: flex;
@@ -614,6 +615,10 @@
 		display: flex;
 		height: 150px;
 		margin-bottom: 40px;
+		background: @border_color;
+		border-radius: @radius;
+		box-sizing: border-box;
+		padding: 5%;
 
 		canvas {
 			width: 100%;
