Back to primary color

--- a/app/less/config.less
+++ b/app/less/config.less
@@ -37,7 +37,7 @@ html {
 // }
 
 body {
-    background: @primary_color;
+    background: @bg_color;
     font-family: @font_family_topic;
     overflow-x: hidden;
 }
