--- a/app/less/style.less
+++ b/app/less/style.less
@@ -19,7 +19,7 @@
 	background: @bg_color;
 	align-items: center;
 	justify-content: center;
-	background: @primary_color;
+	background: @bg_color;
 
 	a.logo-icon {
 		display: flex;
